# redfish-codegen

./: .gitignore  Cargo.toml  LICENSE.MIT  README.md  generate.mk
examples/: server.rs
examples/simple/: Cargo.toml  README.md
examples/simple/src/: main.rs
into-redfish-message/: Cargo.toml
into-redfish-message/src/: lib.rs
patches/: 0002-Fix-capitalization.patch  series
redfish-axum/: .gitignore  Cargo.toml  build.rs
redfish-axum/src/: lib.rs
redfish-codegen/: .gitignore  Cargo.toml  README.md  build.rs  pom.xml
redfish-codegen/src/: lib.rs  main.rs  models.rs  registries.rs  text.rs
redfish-codegen/src/main/java/com/twardyece/dmtf/: Abbreviation.java  CaseConversion.java  CratePath.java  FileFactory.java  ICaseConvertible.java  IModelFileMapper.java  IWord.java  ModelContext.java  ModelFile.java  ModelResolver.java  ModuleContext.java  ModuleFile.java  PascalCasedName.java  RedfishCodegen.java  RedfishModelMapper.java  RustConfig.java  RustIdentifier.java  RustType.java  SimpleModelMapper.java  SnakeCaseName.java  UnversionedModelMapper.java  VersionedModelMapper.java  Word.java
redfish-codegen/src/main/java/com/twardyece/dmtf/api/: ApiEndpoint.java  ApiResolver.java  ApiTrait.java  EndpointResolver.java  NameMapper.java  PathMap.java  PathMapper.java  PathNameTranslator.java  TraitContext.java  TraitContextFactory.java  TraitFile.java  UnmountPathTransformation.java  VertexNamespaceMultiplexer.java
redfish-codegen/src/main/java/com/twardyece/dmtf/api/mapper/: IApiFileMapper.java  ParametrizedApiMapper.java  RootApiMapper.java  TopApiMapper.java
redfish-codegen/src/main/java/com/twardyece/dmtf/api/name/: DetailNameMapper.java
redfish-codegen/src/main/java/com/twardyece/dmtf/identifiers/: IdentifierParseError.java
redfish-codegen/src/main/java/com/twardyece/dmtf/mapper/: IModelFileMapper.java  SimpleModelMapper.java  UnversionedModelMapper.java  VersionedModelMapper.java
redfish-codegen/src/main/java/com/twardyece/dmtf/model/: EnumContext.java  ModelContext.java  ModelContextFactory.java  ModelFile.java  ModelResolver.java  StructContext.java
redfish-codegen/src/main/java/com/twardyece/dmtf/model/context/: EnumContext.java  ModelContext.java  StructContext.java  TupleContext.java
redfish-codegen/src/main/java/com/twardyece/dmtf/model/context/factory/: EnumContextFactory.java  FreeFormObjectContextFactory.java  IModelContextFactory.java  StructContextFactory.java  TupleContextFactory.java  UnionContextFactory.java  UnionVariantParser.java
redfish-codegen/src/main/java/com/twardyece/dmtf/model/contextfactory/: EnumContextFactory.java  IModelContextFactory.java  StructContextFactory.java
redfish-codegen/src/main/java/com/twardyece/dmtf/model/mapper/: IModelFileMapper.java  SimpleModelMapper.java  UnversionedModelMapper.java  VersionedModelMapper.java
redfish-codegen/src/main/java/com/twardyece/dmtf/openapi/: DocumentParser.java
redfish-codegen/src/main/java/com/twardyece/dmtf/policies/: IApiGenerationPolicy.java  ODataTypeIdentifier.java  ODataTypePolicy.java  PatchRequestBodyTypePolicy.java  PropertyTypeStringOverridePolicy.java
redfish-codegen/src/main/java/com/twardyece/dmtf/registry/: RegistryContext.java  RegistryFactory.java  RegistryFileDiscovery.java
redfish-codegen/src/main/java/com/twardyece/dmtf/text/: Abbreviation.java  CamelCaseName.java  CaseConversion.java  ICaseConvertible.java  IWord.java  PascalCaseName.java  PascalCasedName.java  SnakeCaseName.java
redfish-codegen/src/main/resources/templates/: api.mustache  lib.mustache  model.mustache  module.mustache  registry.mustache
redfish-codegen/src/text/: camel_case.rs  lexer.rs  pascal_case.rs  snake_case.rs  word.rs
redfish-core/: Cargo.toml
redfish-core/src/: auth.rs  convert.rs  error.rs  extract.rs  lib.rs  privilege.rs
redfish-generator/: pom.xml
redfish-generator/src/main/java/com/twardyece/dmtf/: CratePath.java  FileFactory.java  LibContext.java  ModuleContext.java  ModuleFile.java  RedfishCodegen.java  RustConfig.java  RustType.java  (+1 more)
redfish-generator/src/main/resources/: codegen.rs
redfish-generator/src/main/resources/templates/: api.mustache  component.mustache  lib.mustache  metadata.mustache  model.mustache  module.mustache  odata.mustache  registry.mustache  route.mustache
redfish-macros/: Cargo.toml  README.md
redfish-macros/src/: lib.rs
redfish-models/: .gitignore  Cargo.toml  README.md
redfish-models/src/: models.rs
registry-patches/: 0001-Fix-json-schema-types-in-License.patch  series
schema-patches/: 0001-Add-missing-slash.patch  0001-Translate-openapi-fragments.patch  0002-Remove-trailing-slash-in-openapi-document.patch  series
seuss/: Cargo.toml  README.md
seuss-auth-pam/: Cargo.toml
seuss-auth-pam/src/: basic.rs  lib.rs
seuss/examples/: basic.rs
seuss/src/: auth.rs  endpoint.rs  error.rs  extract.rs  lib.rs  middleware.rs  model.rs  router.rs  routing.rs  service.rs
seuss/src/auth/: basic.rs  combination.rs  none.rs  pam.rs  privilege.rs  session.rs  session_manager.rs
seuss/src/endpoint/: service_root.rs  systems.rs
seuss/src/extract/: redfish_auth.rs
seuss/src/middleware/: odata.rs  resource_locator.rs
seuss/src/routing/: computer_system_detail.rs  service_root.rs  session_service.rs  systems.rs
seuss/src/routing/session_service/: sessions.rs
seuss/src/service/: account_service.rs  computer_system_detail.rs  odata.rs  redfish_service.rs  redfish_versions.rs  session.rs  session_collection.rs  session_service.rs  systems.rs
seuss/src/service/computer_system_detail/: reset.rs
seuss/src/service/session/: service.rs  session_collection.rs  session_manager.rs
seuss/src/service/session_service/: sessions.rs
src/: api.rs
src/api/: update_service.rs
src/api/update_service/: actions.rs  client_certificates.rs  firmware_inventory.rs  remote_server_certificates.rs  software_inventory.rs
src/api/update_service/actions/: simple_update.rs
test/: .gitignore  Containerfile  README.md  access.conf  config.yaml  pam.conf  requirements.txt  run-container.sh
tools/: fix_openapi_fragments.py  genpatch.sh
(+126 files in other folders)
