[package]
name = "redfish-axum"
version = "0.3.1"
authors = ["Ethan D. Twardy <ethan.twardy@gmail.com>"]
description = "Components for implementing a Redfish service, based on axum."
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://github.com/AmateurECE/redfish-codegen"
documentation = "https://docs.rs/redfish-axum"
repository = "https://github.com/AmateurECE/redfish-codegen"
readme = "README.md"
keywords = ["redfish", "axum"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[dependencies]
axum = { version = "0.6.18", default-features = false }
redfish-core = { version = "0.3.1", path = "../redfish-core" }
redfish-models = { version = "0.3.1", path = "../redfish-models" }
