[package]
name = "redfish-models"
version = "0.1.0"
authors = ["Ethan D. Twardy <ethan.twardy@gmail.com>"]
description = "This contains the definition of a Redfish service."
license = "Apache-2.0"
edition = "2021"

[dependencies]
hyper = "0.14.24"
monostate = "0.1.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
