[package]
name = "redfish-codegen"
version = "0.2.0"
authors = ["Ethan D. Twardy <ethan.twardy@gmail.com>"]
description = "An unopinionated translation of the Redfish specification into Rust."
license = "Apache-2.0"
edition = "2021"
homepage = "https://github.com/AmateurECE/redfish-codegen"
documentation = "https://docs.rs/redfish-codegen"
repository = "https://github.com/AmateurECE/redfish-codegen"
readme = "README.md"
keywords = ["redfish"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
redfish-macros = { version = "0.1.1", path = "../redfish-macros" }
derivative = "2.2.0"
axum = { version = "0.6.15", no-default-features = true, optional = true }

[features]
default = ["api"]
api = []
routing = ["api", "dep:axum"]
