[package]
name = "redfish-core"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.6.18", features = ["json"], default-features = false, optional = true }
redfish-codegen = { version = "0.3.0", path = "../redfish-codegen" }
serde = { version = "1.0.164", features = ["derive"], optional = true }
strum = { version = "0.25.0", features = ["derive"] }

[features]
default = ["axum", "serde"]
axum = ["dep:axum"]
serde = ["dep:serde"]
