[package]
name = "redfish-core"
version = "0.3.1"
authors = ["Ethan D. Twardy <ethan.twardy@gmail.com>"]
description = "Core types and traits for implementing a Redfish service"
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://github.com/AmateurECE/redfish-codegen"
documentation = "https://docs.rs/redfish-core"
repository = "https://github.com/AmateurECE/redfish-codegen"
readme = "README.md"
keywords = ["redfish"]

[dependencies]
axum = { version = "0.6.18", features = ["json"], default-features = false, optional = true }
redfish-models = { version = "0.3.1", path = "../redfish-models" }
serde = { version = "1.0.164", features = ["derive"], optional = true }
strum = { version = "0.25.0", features = ["derive"] }

[features]
default = ["axum", "serde"]
axum = ["dep:axum"]
serde = ["dep:serde"]
