[package]
name = "redfish-macros"
authors = ["Ethan D. Twardy <ethan.twardy@gmail.com>"]
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros useful in Redfish service implementation."
homepage = "https://github.com/AmateurECE/redfish-codegen"
repository = "https://github.com/AmateurECE/redfish-codegen"
documentation = "https://docs.rs/redfish-macros"
readme = "README.md"
keywords = ["redfish"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "1.0.109"
lazy_static = "1.4.0"
regex = "1.7.1"
