[package]
name = "redfish-macros"
version = "0.3.1"
authors = ["Ethan D. Twardy <ethan.twardy@gmail.com>"]
description = "Macros useful in Redfish service implementation."
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://github.com/AmateurECE/redfish-models"
documentation = "https://docs.rs/redfish-macros"
repository = "https://github.com/AmateurECE/redfish-models"
readme = "README.md"
keywords = ["redfish"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "1.0.109"
lazy_static = "1.4.0"
regex = "1.7.1"
