[package]
name = "redfish-models"
version = "0.3.1"
authors = ["Ethan D. Twardy <ethan.twardy@gmail.com>"]
description = "An unopinionated translation of the Redfish specification into Rust."
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://github.com/AmateurECE/redfish-codegen"
documentation = "https://docs.rs/redfish-models"
repository = "https://github.com/AmateurECE/redfish-codegen"
readme = "README.md"
keywords = ["redfish"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
redfish-macros = { version = "0.3.1", path = "../redfish-macros" }
derivative = "2.2.0"
valuable = { version = "0.1.0", features = ["derive"], optional = true }

[features]
default = ["valuable"]
valuable = ['dep:valuable']
