[package]
name = "seuss"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.11"
base64 = "0.21.0"
chrono = "0.4.24"
pam = { version = "0.7.0", optional = true }
redfish-codegen = { version = "0.2.0", path = "../redfish-codegen" }
serde = { version = "1.0.158", features = ["derive"], optional = true }
serde_json = "1.0.94"
users = { version = "0.11.0", optional = true }

[features]
serde = ['dep:serde']
auth-pam = ['dep:pam', 'dep:users']
