[package]
name = "seuss"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.71", optional = true }
axum = "0.6.11"
axum-server = { version = "0.5.1", features = ["tls-rustls"], optional = true }
base64 = "0.21.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
futures = { version = "0.3.28", optional = true }
pam = { version = "0.7.0", optional = true }
rand = "0.8.5"
serde = { version = "1.0.158", features = ["derive"], optional = true }
serde_json = "1.0.94"
signal-hook = { version = "0.3.15", optional = true }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"], optional = true }
tokio = { version = "1.28.2", features = ["full"], optional = true }
tower = "0.4.13"
tracing = "0.1.37"
users = { version = "0.11.0", optional = true }

redfish-core = { version = "0.1.0", path = "../redfish-core" }
redfish-codegen = { version = "0.2.0", path = "../redfish-codegen", features = ["routing"] }

[features]
serde = ['dep:serde']
auth-pam = ['dep:pam', 'dep:users']
service = ['dep:axum-server', 'dep:futures', 'dep:signal-hook', 'dep:signal-hook-tokio', 'dep:anyhow', 'dep:tokio']
