[package]
name = "seuss"
version = "0.3.1"
authors = ["Ethan D. Twardy <ethan.twardy@gmail.com>"]
description = "A batteries-included framework for implementing Redfish-compliant services."
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/AmateurECE/redfish-codegen"
documentation = "https://docs.rs/seuss"
repository = "https://github.com/AmateurECE/redfish-codegen"
readme = "README.md"
keywords = ["redfish"]

[dependencies]
anyhow = { version = "1.0.71", optional = true }
axum = "0.6.11"
axum-server = { version = "0.5.1", features = ["tls-rustls"], optional = true }
base64 = "0.21.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
futures = { version = "0.3.28", optional = true }
pam = { version = "0.7.0", optional = true }
rand = "0.8.5"
serde = { version = "1.0.158", features = ["derive"], optional = true }
serde_json = "1.0.94"
signal-hook = { version = "0.3.15", optional = true }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"], optional = true }
tokio = { version = "1.28.2", features = ["full"], optional = true }
tower = "0.4.13"
tracing = "0.1.37"
users = { version = "0.11.0", optional = true }

redfish-axum = { version = "0.3.1", path = "../redfish-axum" }
redfish-core = { version = "0.3.1", path = "../redfish-core" }
redfish-models = { version = "0.3.1", path = "../redfish-models" }
strum = "0.25.0"

[features]
serde = ['dep:serde']
auth-pam = ['dep:pam', 'dep:users']
router = ['dep:axum-server', 'dep:futures', 'dep:signal-hook', 'dep:signal-hook-tokio', 'dep:anyhow', 'dep:tokio']
